--- a/awwardsApp/templates/signup.html
+++ b/awwardsApp/templates/signup.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <section class="vh-100" style="background-color: #eee">
 	<div class="container h-100">
 		<div class="row d-flex justify-content-center align-items-center h-100">
@@ -9,7 +11,6 @@
 								<p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
 									Sign up
 								</p>
-
 								<form class="mx-1 mx-md-4">
 									<div class="d-flex flex-row align-items-center mb-4">
 										<i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -24,7 +25,6 @@
 											>
 										</div>
 									</div>
-
 									<div class="d-flex flex-row align-items-center mb-4">
 										<i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
 										<div class="form-outline flex-fill mb-0">
@@ -66,20 +66,6 @@
 											>
 										</div>
 									</div>
-
-									<div class="form-check d-flex justify-content-center mb-5">
-										<input
-											class="form-check-input me-2"
-											type="checkbox"
-											value=""
-											id="form2Example3c"
-										/>
-										<label class="form-check-label" for="form2Example3">
-											I agree all statements in
-											<a href="#!">Terms of service</a>
-										</label>
-									</div>
-
 									<div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
 										<button type="button" class="btn btn-primary btn-lg">
 											Register
@@ -103,3 +89,4 @@
 		</div>
 	</div>
 </section>
+{% endblock %}
