--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -42,6 +42,7 @@
 			<!-- Right elements -->
 			<div class="d-flex align-items-center">
 				<!-- Avatar -->
+				{% if user.is_authenticated %}
 				<div class="dropdown">
 					<a
 						class="dropdown-toggle d-flex align-items-center hidden-arrow"
@@ -74,6 +75,12 @@
 						</li>
 					</ul>
 				</div>
+				{% else %}
+				<div>
+					<a href="#" class="btn btn-outline-dark me-2">Login</a>
+					<a href="#" class="btn btn-primary">Signup</a>
+				</div>
+				{% endif %}
 			</div>
 			<!-- Right elements -->
 		</div>
