--- a/awwardsApp/templates/login.html
+++ b/awwardsApp/templates/login.html
@@ -11,17 +11,14 @@
 									Login
 								</p>
 
-								<form class="mx-1 mx-md-4">
+								<form action="" method="POST" class="mx-1 mx-md-4">
+									{% csrf_token %}
 									<div class="d-flex flex-row align-items-center mb-4">
 										<i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
 										<div class="form-outline flex-fill mb-0">
-											<input
-												type="email"
-												id="form3Example3c"
-												class="form-control"
-											/>
-											<label class="form-label" for="form3Example3c"
-												>Your Email</label
+											{{form.username}}
+											<label class="form-label" for={{form.username.auto_id}}
+												>Your Username</label
 											>
 										</div>
 									</div>
@@ -29,19 +26,15 @@
 									<div class="d-flex flex-row align-items-center mb-4">
 										<i class="fas fa-lock fa-lg me-3 fa-fw"></i>
 										<div class="form-outline flex-fill mb-0">
-											<input
-												type="password"
-												id="form3Example4c"
-												class="form-control"
-											/>
-											<label class="form-label" for="form3Example4c"
+											{{form.password}}
+											<label class="form-label" for={{form.password.auto_id}}
 												>Password</label
 											>
 										</div>
 									</div>
 
 									<div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-										<button type="button" class="btn btn-primary btn-lg">
+										<button type="submit" class="btn btn-primary btn-lg">
 											Login
 										</button>
 									</div>
