--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -71,7 +71,7 @@
 							<a class="dropdown-item" href="#">Settings</a>
 						</li>
 						<li>
-							<a class="dropdown-item" href="#">Logout</a>
+							<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
 						</li>
 					</ul>
 				</div>
