--- a/awwardsApp/templates/upload.html
+++ b/awwardsApp/templates/upload.html
@@ -25,7 +25,8 @@
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-8">
 					<h2 class="fw-bold mb-5"> Upload Project </h2>
-					<form>
+					<form action="" method="POST" enctype="multipart/form-data" >
+						{% csrf_token %}
 						<!-- Project Title -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="{{form.title.auto_id}}">
