--- a/awwardsApp/templates/profile.html
+++ b/awwardsApp/templates/profile.html
@@ -84,7 +84,7 @@
 >
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form action="" method="POST" enctype="multipart/form-data">
+			<form action="profile/edit/" method="POST" enctype="multipart/form-data">
 				{% csrf_token %}
 				<div class="modal-header">
 					<h5 class="modal-title" id="exampleModalLabel">Edit Profile</h5>
