Modify the profile update template form

--- a/awwardsApp/templates/profile.html
+++ b/awwardsApp/templates/profile.html
@@ -97,11 +97,11 @@
 				</div>
 				<div class="modal-body">
 					<div class="form-group mb-3">
-						<label class="form-label text-primary" for=""> Upload Profile Pic </label>
+						<label class="form-label text-primary" for={{form.avatar.auto_id}}> Upload Profile Pic </label>
 						{{form.avatar}}
 					</div>
 					<div class="form-group mb-3">
-						<label class="form-label text-primary" for=""> Bio </label>
+						<label class="form-label text-primary" for={{form.bio.auto_id}}> Bio </label>
 						{{form.bio}}
 					</div>
 				<div class="modal-footer">
