Add functionality to display a featured project and a list of the other other projects

--- a/awwardsApp/templates/index.html
+++ b/awwardsApp/templates/index.html
@@ -1,4 +1,41 @@
-{% extends 'base.html' %}
-{% block content %}
-<h1>Hello World</h1>
+{% extends 'base.html' %} {% block content %}
+<div class="container-fluid">
+	<div>
+		<img
+			class="w-100 mb-3"
+			src="{{featured.projectImage}}"
+			alt="feature-productImage"
+		/>
+		<h3 class="text-primary">{{featured.title}}</h3>
+		<a
+			href="/project/{{featured.id}}"
+			class="btn btn-primary d-inline-block my-3"
+		>
+			View More
+		</a>
+	</div>
+	<div class="container d-flex justify-content-between">
+		{% if projects %} {% for project in projects %}
+		<div class="card">
+			<div class="bg-image hover-overlay ripple" data-bs-ripple-color="light">
+				<img
+					src="https://mdbcdn.b-cdn.net/img/new/standard/nature/111.webp"
+					class="img-fluid"
+				/>
+				<a href="#!">
+					<div
+						class="mask"
+						style="background-color: rgba(251, 251, 251, 0.15)"
+					></div>
+				</a>
+			</div>
+			<div class="card-body">
+				<h5 class="card-title">Card title</h5>
+				<a href="/project/{{project.id}}" class="btn btn-primary">View More</a>
+			</div>
+		</div>
+        {% endfor %}
+        {% endif %}
+	</div>
+</div>
 {% endblock %}
