Add functionality to dislay the details of a project and provide rating

--- a/awwardsApp/templates/projectView.html
+++ b/awwardsApp/templates/projectView.html
@@ -15,7 +15,7 @@
 	</div>
     <hr>
     <div>
-        <form action="">
+        <form action="/rating/{{project.id}}/">
             {% csrf_token %}
             <div class="form-group">
                 <label for={{form.design.auto_id}} class="form-label">
