--- a/awwardsApp/templates/404.html
+++ b/awwardsApp/templates/404.html
@@ -6,7 +6,7 @@
 		class="d-flex align-items-center justify-content-center"
 	>
 		<div class="w-50">
-            <h1 class="text-center text-danger mb-3">404 Error</h1>
+            <h1 class="text-center text-danger mb-3">Oh Snap!</h1>
 			<img class="w-100" src="{% static 'media/404.jpg' %}" alt="" />
 			<h2 class="text-center text-primary mt-4">
 				There are no projects to display
